--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,125 @@
+Fri Apr  1 17:50:52 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/scripting.c:
+
+	Drop #ifdef/#endif guards.  
+
+Fri Apr  1 17:42:56 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/: scripting.c, guile/hooks.h, lua/core.h,
+	lua/hooks.h, perl/core.h, perl/hooks.h, ruby/hooks.h, ruby/ruby.h:
+
+	Headers cleanup.  
+
+Fri Apr  1 17:36:46 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/: scripting.c, guile/Makefile.am, guile/core.c,
+	guile/core.h, guile/guile.c, guile/guile.h, guile/hooks.h:
+
+	Move guile_scripting_module to its own file, introducing
+	guile.{c,h}, it permits to drop hooks/core interdependency.  
+
+Fri Apr  1 17:29:41 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/scripting.h:
+
+	Just declare struct module.  
+
+Fri Apr  1 17:27:18 2005  Laurent Monin <zas@norz.org>:
+
+	* configure.in, config/m4/ruby.m4:
+
+	Fix Guile and Ruby detection, it was a quoting issue. Thanks to
+	Jonas.  
+
+Fri Apr  1 17:20:59 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/ruby/: Makefile.am, core.c, core.h, ruby.c, ruby.h:
+
+	Move ruby_scripting_module to its own file, introducing ruby.c, it
+	permits to drop hooks/core interdependency.  
+
+Fri Apr  1 16:56:33 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/ftp/parse.c:
+
+	parse_ftp_unix_response(): Use parse_time() if memchr() finds a ':'
+	in the time token.  
+
+Fri Apr  1 16:54:23 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/date.c:
+
+	parse_time(): Fix logic for testing buffer room, update the @time
+	pointer when returning after HH:MM has been parsed and make s1, s2
+	local.  
+
+Fri Apr  1 16:25:22 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/date.c:
+
+	parse_date(): Remove use of char variable.  
+
+Fri Apr  1 16:21:02 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/date.c:
+
+	Assume the epoch is starting at 1.1.1970 like Wget.  
+
+Fri Apr  1 16:18:05 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/ftp/ftp.c:
+
+	Try to make it a bit more obvious what bit flags are getting tested.
+	Maybe a bit over-macroized.  
+
+Fri Apr  1 15:36:17 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* AUTHORS:
+
+	Add Sergey E. Galanov who added Lua-support for setting and getting
+	Elinks options.  
+
+Fri Apr  1 15:22:15 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/bfu/dialog.c:
+
+	clear_dialog(): Comment the focus resetting introduced in (1.200 ->
+	1.201).  
+
+Fri Apr  1 15:17:43 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/bookmarks/dialogs.c:
+
+	test_search(): De-compress start brace.  
+
+Fri Apr  1 15:01:20 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/util/lists.h:
+
+	Tidyup space.  
+
+Fri Apr  1 09:47:28 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/perl/: Makefile.am, core.c, core.h, perl.c, perl.h:
+
+	Move perl_scripting_module to its own file, introducing perl.c, it
+	permits to drop hooks/core interdependency.  
+
+Fri Apr  1 09:41:37 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/lua/: Makefile.am, core.c, core.h, lua.c, lua.h:
+
+	Move lua_scripting_module to its own file, introducing lua.c, it
+	permits to drop hooks/core interdependency.  
+
+Fri Apr  1 09:11:37 2005  Laurent Monin <zas@norz.org>:
+
+	* src/scripting/: guile/core.c, lua/core.c, lua/hooks.c,
+	perl/hooks.c, ruby/core.c:
+
+	Do not include scripting.h.  
+
 Thu Mar 31 10:24:18 2005  Laurent Monin <zas@norz.org>:
 
 	* src/viewer/text/view.c:
