--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ See ChangeLog for recent changes, bugfixes and new features.
 ELinks now:
 
 * support for Lua 4.x was dropped, we only support Lua 5.x now.
+
+ELinks 0.10.4:
+
 * explicit keyboard accelerators were defined for buttons in dialogue boxes
   and are now highlighted.
 
