--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,286 @@
+Mon Apr 11 21:58:51 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, sched/connection.c, sched/connection.h:
+
+	Move the void *buffer member from struct connection to
+	connection_socket.  
+
+Mon Apr 11 21:44:40 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_exception(): Use connection_socket handlers and minor cleanup.  
+
+Mon Apr 11 21:39:31 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ssl/connect.c:
+
+	Oops, dns_found() now takes connection_socket parameter.  
+
+Mon Apr 11 21:37:44 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: protocol/smb/smb.c, sched/connection.c, ssl/connect.c:
+
+	More close_socket() changes related to last patch.  
+
+Mon Apr 11 21:35:41 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h, protocol/ftp/ftp.c:
+
+	close_socket(): No need to take connection parameter. I am a little
+	puzzled about whether conn = NULL is some hidden feature or simply
+	remains from the introduction of GNU TLS in version 1.21 from July 5
+	2002. It is committed at 03:59 so it could be due to pasky's late
+	night hacking frenzy. ;) 
+
+Mon Apr 11 21:20:49 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h, sched/connection.c:
+
+	dns_found(): Take connection_socket instead of connection.  
+
+Mon Apr 11 21:15:39 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, protocol/http/http.c, ssl/connect.c,
+	ssl/connect.h:
+
+	ssl_connect(): No need to pass struct connection.  
+
+Mon Apr 11 21:10:19 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	struct conn_info: Add boolean need_ssl member.  
+
+Mon Apr 11 21:04:43 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Fix comment: s/conn/conn_socket/.  
+
+Mon Apr 11 21:03:32 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	struct conn_info: Add a ip_family member initialized from
+	uri->ip_family.  
+
+Mon Apr 11 20:55:34 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/dns.c:
+
+	struct dnsquery: Remove xfn callback member. Rename end_dns_lookup()
+	-> done_dns_lookup(). Call done_dns_lookup() directly instead of
+	using dnsquery->xfn() in *_lookup() functions.  
+
+Mon Apr 11 20:51:04 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: dns.c, dns.h:
+
+	Introduce dns_callback_T. struct dnsquery: fn -> done.  
+
+Mon Apr 11 20:28:25 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h,
+	protocol/http/http.c, sched/connection.c, sched/connection.h,
+	ssl/connect.c:
+
+	Move conn->conn_info to connection_socket. A few hacks which will
+	have to be cleaned up was needed.  
+
+Mon Apr 11 20:22:36 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	done_connection_info(): Use mem_set_free() again when NULLifying but
+	pass the right pointer.  
+
+Mon Apr 11 20:20:44 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	done_connection_info(): Don't mem_set_free() when NULLifying.  
+
+Mon Apr 11 19:32:49 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	done_connection_info(): Use mem_set_free() when NULLifying.  
+
+Mon Apr 11 19:30:23 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_exception(): Access conn->socket directly when calling
+	close_socket().  
+
+Mon Apr 11 19:22:31 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_found(): Use connection_socket handlers.  
+
+Mon Apr 11 19:17:00 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_found(): Use retry_conn_with_state(). I am not entirely sure the
+	new code is equivalent to the old but I am pretty sure it is not far
+	from. ;) 
+
+Mon Apr 11 19:03:25 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/dns.c:
+
+	Make dns_cache static.  
+
+Mon Apr 11 18:31:49 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, protocol/ftp/ftp.c, sched/connection.c,
+	sched/connection.h:
+
+	Move the boolean conn->protocol_family to the connection_socket
+	struct.  
+
+Mon Apr 11 18:26:33 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Compile fix.  
+
+Mon Apr 11 18:23:21 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_found(): Use local connection_socket variable. Assert that
+	conn_info->socket is always set.  
+
+Mon Apr 11 18:09:35 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/dns.c:
+
+	find_in_dns_cache(): e -> dnsentry.  
+
+Mon Apr 11 18:07:44 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h, sched/connection.c,
+	sched/connection.h:
+
+	Move the conn->dnsquery pointer to the conn_info struct.  
+
+Mon Apr 11 17:56:43 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/dns.c:
+
+	find_in_dns_cache(): Return the found dnsentry or NULL instead of
+	error code.  
+
+Mon Apr 11 17:16:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/dns.c, lowlevel/select.h,
+	osdep/os2/os2.c, osdep/unix/unix.c, protocol/ftp/ftp.c,
+	protocol/smb/smb.c, sched/connection.c, terminal/kbd.c,
+	terminal/terminal.c:
+
+	Introduce a clear_handlers() macro equivalent to
+	set_handlers(socket->fd, NULL, NULL, NULL, NULL) calls.  
+
+Mon Apr 11 16:45:56 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	dns_found() is already declared in the header so remove.  
+
+Mon Apr 11 16:35:00 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: sched/connection.c, sched/connection.h, ssl/connect.c:
+
+	Introduce set_state() handler for the connection_socket. Use it in
+	the SSL code.  
+
+Mon Apr 11 16:23:59 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ssl/connect.c:
+
+	ssl_connect(): Always use the connection_socket variable instead of
+	accessing it via connection or conn_info struct.  
+
+Mon Apr 11 16:21:17 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, ssl/connect.c, ssl/connect.h:
+
+	No need to passs struct connection parameter to ssl_write().  
+
+Mon Apr 11 16:18:13 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ssl/: connect.c, connect.h:
+
+	No need to passs struct connection parameter to ssl_close().  
+
+Mon Apr 11 16:15:35 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.h:
+
+	Improve the socket done handler description.  
+
+Mon Apr 11 16:14:38 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ssl/connect.c:
+
+	Use socket->conn instead of conn parameter.  
+
+Mon Apr 11 16:13:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	More socket operation usage.  
+
+Mon Apr 11 16:05:02 2005  Laurent Monin <zas@norz.org>:
+
+	* src/ssl/connect.c:
+
+	ssl_write(): fix comment.  
+
+Mon Apr 11 16:04:04 2005  Laurent Monin <zas@norz.org>:
+
+	* src/ssl/connect.c:
+
+	ssl_write(): try to make code more explicit.  
+
+Mon Apr 11 15:58:00 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: sched/connection.c, sched/connection.h, ssl/connect.c:
+
+	struct connection_socket: Add a data member and done() + retry()
+	handlers. Use it in the SSL code.  
+
+Mon Apr 11 15:40:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.h:
+
+	Revert chunk which should not have been in last patch.  
+
+Mon Apr 11 15:39:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: sched/connection.h, ssl/connect.c:
+
+	ssl_write(), ssl_read(): Store the connection_state and use
+	{abort,retry}_conn_with_state() instead of set_connection_state() +
+	{abort,retry}_connection() combo.  
+
+Mon Apr 11 15:31:07 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: sched/connection.h, ssl/connect.c:
+
+	Move the no_tls boolean variable from struct connection to struct
+	connection_socket.  
+
+Mon Apr 11 08:10:07 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
 Sun Apr 10 20:49:48 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/protocol/gopher/gopher.c:
